--- a/index.html
+++ b/index.html
@@ -6,8 +6,106 @@
     <title>F8 project 02</title>
     <!-- reset css -->
     <link rel="stylesheet" href="./asset/css/reset.css" />
+
+    <!-- font chu -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Poppins:ital,wght@0,200;0,400;0,500;0,600;0,700;1,400&family=Sen:wght@700&display=swap"
+      rel="stylesheet"
+    />
     <!-- style css -->
     <link rel="stylesheet" href="./asset/css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <main style="height: 5000px">
+      <header class="header fixed">
+        <div class="content">
+          <div class="body">
+            <!-- logo -->
+            <img src="./asset/img/logo.svg" alt="logo" class="logo" />
+            <!-- nav -->
+            <div class="nav">
+              <ul>
+                <li class="active">
+                  <a href="#!">Home</a>
+                </li>
+                <li>
+                  <a href="#!">Courses</a>
+                </li>
+                <li>
+                  <a href="#!">Pricing</a>
+                </li>
+                <li>
+                  <a href="#!">Reviews</a>
+                </li>
+              </ul>
+            </div>
+            <!-- action -->
+            <div class="action">
+              <a href="#!" class="btn">Sign Up</a>
+            </div>
+          </div>
+        </div>
+      </header>
+      <!-- -=======================hero========================= -->
+      <div class="hero">
+        <div class="content">
+          <div class="frame">
+            <div class="base">
+              <img
+                src="./asset/img/guy-lesson 1.svg"
+                alt="lesson"
+                class="lesson"
+              />
+              <div class="base-child">
+                <ul>
+                  <li style="list-style-image: url(./asset/img/icon1.svg)">
+                    <div class="element">
+                      <p class="subtitle">20 Courses</p>
+                      <h4>UI/UX Design</h4>
+                    </div>
+                  </li>
+                  <li style="list-style-image: url(./asset/img/icon2.svg)">
+                    <div class="element">
+                      <p class="subtitle">20 Courses</p>
+                      <h4>Development</h4>
+                    </div>
+                  </li>
+                  <li style="list-style-image: url(./asset/img/icon3.svg)">
+                    <div class="element">
+                      <p class="subtitle">30 Courses</p>
+                      <h4>Marketing</h4>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="info">
+              <h1>Learn without limits and spread knowledge.</h1>
+              <p class="subtitle">
+                Build new skills for that “this is my year” feeling with
+                courses, certificates, and degrees from world-class universities
+                and companies.
+              </p>
+              <div class="row">
+                <div class="action">
+                  <a href="#!" class="btn btn-row">See Courses</a>
+                </div>
+                <div class="video">
+                  <img src="./asset/img/video.svg" alt="video" />
+                  <a href="!#" class="watch-vdieo">Watch Video</a>
+                </div>
+              </div>
+              <p class="subtitle-recent">Recent engagement</p>
+              <div class="row-para">
+                <p class="para1"><strong>50K</strong> Students</p>
+                <p class="para2"><strong>70+</strong>Courses</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
