--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
   <body>
     <main style="height: 5000px">
+      <!-- header -->
       <header class="header fixed">
         <div class="content">
           <div class="body">
@@ -104,6 +105,72 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+      <!-- Courses -->
+      <div class="Courses">
+        <div class="content">
+          <h2 class="title">Our popular courses</h2>
+          <div class="row">
+            <p class="subtitle">
+              Build new skills with new trendy courses and shine for the next
+              future career.
+            </p>
+            <img src="./asset/img/Icons.svg" alt="icons" />
+          </div>
+          <ul>
+            <li>
+              <img src="./asset/img/image-courses1.svg" alt="image1" />
+              <div class="row-courses1">
+                <h3>Basic web design</h3>
+                <img src="./asset/img/Rating.svg" alt="stars" />
+              </div>
+              <p class="subtitle-courses">
+                Get the best course, gain knowledge and shine for your future
+                career.
+              </p>
+              <div class="row-courses2">
+                <h3>$120.75</h3>
+                <div class="action">
+                  <a href="#!" class="btn">Book Now</a>
+                </div>
+              </div>
+            </li>
+            <li>
+              <img src="./asset/img/image-courses2.svg" alt="image2" />
+              <div class="row-courses1">
+                <h3>UI/UX design</h3>
+                <img src="./asset/img/Rating.svg" alt="stars" />
+              </div>
+              <p class="subtitle-courses">
+                Get the best course, gain knowledge and shine for your future
+                career.
+              </p>
+              <div class="row-courses2">
+                <h3>$120.75</h3>
+                <div class="action">
+                  <a href="#!" class="btn">Book Now</a>
+                </div>
+              </div>
+            </li>
+            <li>
+              <img src="./asset/img/image-courses3.svg" alt="image3" />
+              <div class="row-courses1">
+                <h3>Web App design</h3>
+                <img src="./asset/img/Rating.svg" alt="stars" />
+              </div>
+              <p class="subtitle-courses">
+                Get the best course, gain knowledge and shine for your future
+                career.
+              </p>
+              <div class="row-courses2">
+                <h3>$120.75</h3>
+                <div class="action">
+                  <a href="#!" class="btn">Book Now</a>
+                </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </div>
     </main>
