--- a/index.html
+++ b/index.html
@@ -173,6 +173,29 @@
           </ul>
         </div>
       </div>
+      <!-- Student -->
+      <div class="Student">
+        <div class="content">
+          <div class="information">
+            <div class="people">
+              <img src="./asset/img/people.svg" alt="people" />
+              <h3>Peter Moor</h3>
+
+              <p class="subtitle">Student of Web Design</p>
+              <img src="./asset/img/3cham.svg" alt="3 cham" class="wait" />
+            </div>
+            <div class="info">
+              <img src="./asset/img/Vector (9).svg" alt="vector" />
+              <p class="subtile">
+                Not only does my resume look impressive—filled with the names
+                and logos of world-class institutions—but these certificates
+                also bring me closer to my career goals by validating the skills
+                I've learned."
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
