--- a/index.html
+++ b/index.html
@@ -196,6 +196,47 @@
           </div>
         </div>
       </div>
+      <!-- ===============================Review=================== -->
+      <div class="Review">
+        <div class="content">
+          <div class="review-1">
+            <div class="image">
+              <img src="./asset/img/image1.svg" alt="image1" class="image-1" />
+              <img src="./asset/img/image2.svg" alt="image2" class="image-2" />
+            </div>
+            <div class="info">
+              <h2>Learner outcomes through our awesome platform</h2>
+              <p class="subtile">
+                87% of people learning for professional development report
+                career benefits like getting a promotion, a raise, or starting a
+                new career.
+              </p>
+              <p class="subtile-1">Lesson Impact Report (2022)</p>
+              <div class="action">
+                <a href="#!" class="btn">Sign Up</a>
+              </div>
+            </div>
+          </div>
+          <div class="review-2">
+            <div class="info">
+              <h2>
+                Take the next step toward your personal and professional goals
+                with Lesson.
+              </h2>
+              <p class="subtile">
+                Take the next step toward. Join now to receive personalized and
+                more recommendations from the full Coursera catalog.
+              </p>
+              <div class="action">
+                <a href="#!" class="btn">Join Now</a>
+              </div>
+            </div>
+            <div class="image">
+              <img src="./asset/img/image3.svg" alt="image3" />
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
   </body>
 </html>
