--- a/index.html
+++ b/index.html
@@ -237,6 +237,62 @@
           </div>
         </div>
       </div>
+      <!--=============================== Our-blog====================== -->
+      <div class="Our-blog">
+        <div class="content">
+          <div class="blog">
+            <h2>Our blog</h2>
+            <p class="subtile1">
+              Read our regular travel blog and know the latest update of tour
+              and travel
+            </p>
+
+            <ul>
+              <li>
+                <img src="./asset/img/blog1.svg" alt="blog1" />
+                <div class="info">
+                  <p class="subtile">21 November 2021</p>
+                  <hr />
+                  <h3>
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3>
+                  <div class="action">
+                    <a href="#!" class="btn">Read More</a>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <img src="./asset/img/blog2.svg" alt="blog2" />
+                <div class="info">
+                  <p class="subtile">21 November 2021</p>
+                  <hr />
+                  <h3>
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3>
+                  <div class="action">
+                    <a href="#!" class="btn">Read More</a>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <img src="./asset/img/blog3.svg" alt="blog3" />
+                <div class="info">
+                  <p class="subtile">21 November 2021</p>
+                  <hr />
+                  <h3>
+                    How to become a pro web designer in 2022 and get remot job?
+                  </h3>
+                  <div class="action">
+                    <a href="#!" class="btn">Read More</a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+            <img src="" alt="" />
+          </div>
+        </div>
+      </div>
+      <!-- ============================footer================ -->
     </main>
   </body>
 </html>
