--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" href="./asset/css/style.css" />
   </head>
   <body>
-    <main style="height: 5000px">
+    <main style="height: 5500px">
       <!-- header -->
       <header class="header fixed">
         <div class="content">
@@ -288,11 +288,64 @@
                 </div>
               </li>
             </ul>
-            <img src="" alt="" />
+            <div class="last">
+              <img src="./asset/img/3cham.svg" alt="" />
+            </div>
           </div>
         </div>
       </div>
       <!-- ============================footer================ -->
+      <div class="footer">
+        <div class="content">
+          <div class="footer-main">
+            <div class="connect">
+              <img src="./asset/img/Lesson. (1).svg" alt="logo" />
+              <p class="subtile">
+                Need to help for your dream Career? trust us. With Lesson, study
+                becomes a lot easier with us.
+              </p>
+              <div class="icon">
+                <img src="./asset/img/twitter.svg" alt="twitter" />
+                <img src="./asset/img/Facebook.svg" alt="Facebook" />
+                <img src="./asset/img/linked_in.svg" alt="linked_in" />
+                <img src="./asset/img/instagram.svg" alt="instagram" />
+              </div>
+            </div>
+            <div class="company">
+              <h2>Company</h2>
+              <ul>
+                <li>About Us</li>
+                <li>Features</li>
+                <li>Our Pricing</li>
+                <li>Latest News</li>
+              </ul>
+            </div>
+            <div class="support">
+              <h2>Support</h2>
+              <ul>
+                <li>FAQ’s</li>
+                <li>Terms & Conditions</li>
+                <li>Privacy Policy</li>
+                <li>Contact Us</li>
+              </ul>
+            </div>
+
+            <div class="address">
+              <h2>Address</h2>
+              <ul>
+                <li>
+                  <strong>Location:</strong> 27 Division St, New York, NY 10002,
+                  USA
+                </li>
+                <li><strong>Email:</strong> email@gmail.com</li>
+                <li><strong>Phone:</strong> + 000 1234 567 890</li>
+              </ul>
+            </div>
+          </div>
+          <hr />
+          <p class="note">Copyright ©2022 webdesign.gdn All rights reserved</p>
+        </div>
+      </div>
     </main>
   </body>
 </html>
